2025-09-03  Zhengyi Fu  <i@fuzy.me>

	* init.el (help-window-keep-selected): Set to t.

2025-09-02  Zhengyi Fu  <i@fuzy.me>

	* init.el (ement-save-sessions): Set to t.

2025-09-02  Zhengyi Fu  <i@fuzy.me>

	* init.el (consult-mode-histories): Fix histories for
	`eca-chat-mode'.

2025-09-02  Zhengyi Fu  <i@fuzy.me>

	* init.el (+maybe-init-fontset): Demote errors to messages.

2025-09-02  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/check-hooks.el: New file.

2025-09-02  Zhengyi Fu  <i@fuzy.me>

	* init.el: Wrap some `add-hook' forms in `after-load!' to prevent
	the standard-value from being overwritten.

2025-09-02  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/xiaoshuo.el (xiaoshuo-mode-map): Define keys.

2025-09-02  Zhengyi Fu  <i@fuzy.me>

	Minor improvement in gnus-diff

	* site-lisp/gnus-diff.el: Require `gnus-art'.
	(gnus-treat-highlight-diffs): Change to a user option.

2025-09-01  Zhengyi Fu  <i@fuzy.me>

	* init.el: Use `require-theme' to load modus-themes.

2025-09-01  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Instead of adding entries to
	`straight-built-in-pseudo-packages', register those packages with
	`:type built-in'.

2025-09-01  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/xiaoshuo.el (xiaoshuo-mode): Set `mode-line-format' to nil.

2025-08-31  Zhengyi Fu  <i@fuzy.me>

	* init.el (+fontsets-initilize-hook): New variable.
	(+init-fontsets): Run `+fontset-initialize-hook'.

2025-08-31  Zhengyi Fu  <i@fuzy.me>

	Do not use default save files

	* init.el (recentf-save-file, save-place-file)
	(project-list-file, tramp-persistency-file-name, savehist-file):
	Remove fallback names for these files.  This prevent the default
	names of the files being used after running emacs -Q.

2025-08-31  Zhengyi Fu  <i@fuzy.me>

	Some minor updates

	* transient/values.el (gptel-menu): Add --color to
	magit-log:mode-log-mode.

	* site-lisp/gptel-config.el (kimi-assistant): Use `search_web'
	instead of the built-in `$websearch'.

	* packages.el (straight-built-in-pseudo-packages): Add `peg'.