@@ -1,5 +1,9 @@
 2025-09-03  Zhengyi Fu  <i@fuzy.me>
 
+	* init.el: Fix bootstrapping of pdf-tools.
+
+2025-09-03  Zhengyi Fu  <i@fuzy.me>
+
 	* init.el (help-window-keep-selected): Set to t.
 
 2025-09-02  Zhengyi Fu  <i@fuzy.me>
